added local to home page tag line and an s at the end of specialosts

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
         <div class="landing-dark"></div>
         <div class="container landing-group">
             <div class="landing-text">
-                <h1>Your Puget Sound Construction Supply Specialist</h1>
+                <h1>Your Local Puget Sound Construction Supply Specialists</h1>
                 <h2>Valley Construction Supply is the largest locally owned and operated
                     supplier of wholesale concrete, framing, rebar, drainage and miscellaneous construction materials 
                      for Seattle and the surrounding Puget Sound area.
