--- a/index.html
+++ b/index.html
@@ -208,8 +208,8 @@
                     <svg aria-hidden="true" xmlns="http://www.w3.org/2000/svg" id="Layer_5" enable-background="new 0 0 64 64" height="512px" viewBox="0 0 64 64" width="512px" class=""><g><g><path d="m26 1h-16c-1.654 0-3 1.346-3 3s1.346 3 3 3v5c0 2.757 2.243 5 5 5v-2c-1.654 0-3-1.346-3-3v-5h12v5c0 1.654-1.346 3-3 3v2c2.757 0 5-2.243 5-5v-5c1.654 0 3-1.346 3-3s-1.346-3-3-3zm0 4h-16c-.552 0-1-.448-1-1s.448-1 1-1h16c.552 0 1 .448 1 1s-.448 1-1 1z" data-original="#000000" class=""/><path d="m54 1h-16c-1.654 0-3 1.346-3 3s1.346 3 3 3v5c0 2.757 2.243 5 5 5v-2c-1.654 0-3-1.346-3-3v-5h12v5c0 1.654-1.346 3-3 3v2c2.757 0 5-2.243 5-5v-5c1.654 0 3-1.346 3-3s-1.346-3-3-3zm0 4h-16c-.552 0-1-.448-1-1s.448-1 1-1h16c.552 0 1 .448 1 1s-.448 1-1 1z" data-original="#000000" class=""/><path d="m50.46 61c.954-1.063 1.54-2.462 1.54-4h.414l4.666-4.666-3.25-17.334h-4.83v2h3.17l2.75 14.666-3.287 3.287c-.614-1.684-1.958-3.015-3.651-3.61.006-.114.018-.228.018-.343 0-3.309-2.691-6-6-6-1.496 0-2.886.571-3.955 1.516l1.785-9.516h3.17v-2h-4.83l-2.45 13.07c-.236-.039-.474-.07-.72-.07-.817 0-1.624.21-2.348.602-.935-1.018-2.241-1.602-3.652-1.602-.362 0-.718.045-1.065.121.698-1.877 1.065-3.869 1.065-5.892v-6.229h-22v6.229c0 5.221 2.39 10.087 6.449 13.279-.888.903-1.449 2.128-1.449 3.492 0 1.13.391 2.162 1.026 3h-8.026v2h54v-2zm-27.561-24c-.465 2.279-2.484 4-4.899 4s-4.434-1.721-4.899-4zm-13.899 4.229v-4.229h2.08c.488 3.386 3.401 6 6.92 6s6.432-2.614 6.92-6h2.08v4.229c0 2.372-.568 4.699-1.645 6.799-.958-.649-2.113-1.028-3.355-1.028-3.309 0-6 2.691-6 6 0 .033 0 .066.001.101-.271.055-.532.135-.786.232-3.898-2.797-6.215-7.278-6.215-12.104zm37 19.771h-29c-1.654 0-3-1.346-3-3 0-1.638 1.319-2.974 2.951-3l1.386.045-.255-1.236c-.055-.264-.082-.537-.082-.809 0-2.206 1.794-4 4-4s4 1.794 4 4h2c0-1.202-.359-2.321-.97-3.261.541-.47 1.24-.739 1.97-.739 1.056 0 2.015.552 2.566 1.475l.604 1.016.901-.765c.391-.331 1.041-.726 1.929-.726 1.654 0 3 1.346 3 3h2c0-1.456-.636-2.757-1.633-3.672.644-1.396 2.059-2.328 3.633-2.328 2.206 0 4 1.794 4 4-1.31 0-2.555.414-3.599 1.198l1.201 1.6c.696-.523 1.525-.798 2.398-.798 2.206 0 4 1.794 4 4s-1.794 4-4 4z" data-original="#000000" class=""/><path d="m22 35v-20c0-2.206-1.794-4-4-4s-4 1.794-4 4v20z" fill="#f0bc5e" data-original="#F0BC5E" class="active-path" style="fill:#FDD008" data-old_color="#f0bc5e"/><g><path d="m61 61h2v2h-2z" data-original="#000000" class=""/><path d="m1 61h2v2h-2z" data-original="#000000" class=""/><path d="m27 59h2c0-.552.448-1 1-1v-2c-1.654 0-3 1.346-3 3z" data-original="#000000" class=""/><path d="m17 59h2c0-.552.448-1 1-1v-2c-1.654 0-3 1.346-3 3z" data-original="#000000" class=""/><path d="m41 55v2c.552 0 1 .448 1 1h2c0-1.654-1.346-3-3-3z" data-original="#000000" class=""/><g><path d="m21 57h2c0-.552.448-1 1-1v-2c-1.654 0-3 1.346-3 3z" data-original="#000000" class=""/><path d="m33 52v2c.552 0 1 .448 1 1h2c0-1.654-1.346-3-3-3z" data-original="#000000" class=""/></g><path d="m36 56v2c.552 0 1 .448 1 1h2c0-1.654-1.346-3-3-3z" data-original="#000000" class=""/></g><g><path d="m47.721 43h-3.441l-2.28-6.838v-25.162h8v25.162z" fill="#f0bc5e" data-original="#F0BC5E" class="active-path" style="fill:#FDD008" data-old_color="#f0bc5e"/></g></g></g> </svg>
                     <h3>Erosion Control</h3>
                     <div class="card-line"></div>
-                    <p>We offer a wide variety Erosion control products, from Poly sheeting, Catch Basin Socks, 
-                       Poly Sand Bags, Reinforced Filter Fence, And numerous other Geotextile products including 
+                    <p>We offer a wide variety Erosion Control Products, from Poly Sheeting, Catch Basin Socks, 
+                       Poly Sand Bags, Reinforced Filter Fence, and numerous other Geotextile Products including 
                        Straw Bales, T/Post, Wood Stakes, and Straw Waddles.
                     </p>
                     <button type="button" onclick="location.href='html/services.html'">
@@ -411,10 +411,9 @@
             <div id="services-heading">
                 <h2 class="heading-lines"><span>VALLEY'S</span> PROMISE</h2>
                 <p>
-                   Our team works hard everyday to ensure not only the best customer service
+                   Our team works hard everyday to provide not only the best customer service
                    in the industry, but also the best experience.  When you work with Valley Construction
-                   Supply, you have a partner that will make sure you have everything you need 
-                   when you need it.  That is our promise and guarantee.  
+                   Supply, you have a partner that will make sure you have everything you need.  That is our promise and guarantee.  
                 </p>
             </div>
             <img src="images/worker.jpg" alt="iron worker pulling something" width="200px" height="200px">
@@ -446,9 +445,9 @@
                     <rect x="416" y="416" style="fill:#000000" width="16" height="16" data-original="#333333" class="" data-old_color="#333333"/>
                     <path style="fill:#000000" d="M72,384c-22.056,0-40,17.944-40,40s17.944,40,40,40v-16c-13.232,0-24-10.768-24-24s10.768-24,24-24   s24,10.768,24,24h16C112,401.944,94.056,384,72,384z" data-original="#333333" class="" data-old_color="#333333"/>
                 </g></g> </svg>
-                <h3>Accurrate Take Offs</h3>
+                <h3>Accurate Take-Offs</h3>
                 <p>
-                   Review Blueprint’s to gather the correct material and 
+                   Review blueprints to gather the correct material and 
                    make a thorough list for drainage, foundation, framing 
                    and miscellaneous hardware.
                 </p>
@@ -495,10 +494,11 @@
                     Read More<i class="fas fa-chevron-right"></i>
                 </button>
             </div>
+            <button class="solid service-button"  type="button" onclick="location.href='html/services.html'">
+                SEE OUR SERVICES
+            </button>
         </div>
-        <button class="solid service-button"  type="button" onclick="location.href='html/services.html'">
-            SEE OUR SERVICES
-        </button>
+        
     </section>
 
     <!-- ============================================ -->
