fixed spacing issues

--- a/index.html
+++ b/index.html
@@ -548,8 +548,8 @@
                     While years build experience, they also build relationships 
                 </h3>
                 <p>
-                   Weyerhaeuser has been a trsuted partner of ours since the day we opened
-                   our doors over 35 years ago and are the premier company for rebar manufacturing.
+                   Weyerhaeuser has been a trusted partner of ours since the day we opened
+                   our doors over 35 years ago. They are the premier company for rebar manufacturing.
                 </p>
                 <button class="solid showcase-button"  type="button" onclick="location.href='html/contact.html'"m>
                     Visit Weyerhaeuser
@@ -572,13 +572,10 @@
         <div class="sales-container container">
             <div class="sales-topper">
                 <h2 class="heading-lines"><span>OUR</span> SALES TEAM</h2>
-                <p>Valley Construction Supply was established in 1982 by Principal Cliff 
-                   Beatty. Our goal is to assure each customer is greeted by our top notch 
-                   customer service, as well as full attention to detail from customer to 
-                   customer. Here at Valley Construction Supply we believe that the construction 
+                <p>Here at Valley Construction Supply we believe that the construction 
                    industry is a relationship business and that our customers deserve personalized, 
-                   hands-on customer service that serves them beyond their construction material needs! 
-                   Scroll, to learn more about our sales staff below!!!
+                   hands-on customer service that serves them beyond their construction material needs. 
+                   
                 </p>
             </div>
             <div class="sales-people">
