made the materials page, removed redundant nav items in main nav, made project gallery topper a banner

--- a/html/materials.html
+++ b/html/materials.html
@@ -16,7 +16,7 @@
 
     <!-- Stylesheet -->
     <link rel="stylesheet" href="/css/root-styles.css">
-    <link rel="stylesheet" href="/css/about.css">
+    <link rel="stylesheet" href="/css/materials.css">
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css"/>
 
     <!-- Fonts -->
@@ -140,7 +140,7 @@
         <div class="container landing-group">
             <div class="landing-text">
 
-                <h1>About Valley Construction Supply</h1>
+                <h1>Building Materials</h1>
                 
             </div>
         </div>
@@ -151,102 +151,176 @@
     <!--                     MAIN                     -->
     <!-- ============================================ -->
 
-    <section>
-        <div class="left">
-            <ul>
-                <li>EXCAVATION
-                    <ul>
-                        <li>Filter Fence</li>
-                        <li>Geo Textiles</li>
-                        <li>Culvert</li>
-                        <li>Flagging Tape</li>
-                        <li>Catch Basins</li>
-                        <li>Straw</li>
-                        <li>Filter Fabric</li>
-                    </ul>
-                </li>
-                <li>FOUNDATION
-                    <ul>
-                        <li>Rebar, Cut & Bent Rebar</li>
-                        <li>ICF Panels</li>
-                        <li>Custom/Anchor Bolts</li>
-                        <li>Lateral Restraint Straps</li>
-                        <li>Foundation Vents</li>
-                        <li>Sono Tube</li>
-                        <li>Pier Molds</li>
-                        <li>Access Wells</li>
-                    </ul>
-                </li>
-                <li>CONCRETE ACCESSORIES
-                    <ul>
-                        <li>Cleats/Snap Ties</li>
-                        <li>Tie Wire</li>
-                        <li>Duplex Nails</li>
-                        <li>Form Oil</li>
-                        <li>Wood & Metal Stakes</li>
-                        <li>Snaptie Shoes</li>
-                        <li>Footing Straps</li>
-                        <li>Asphault Emulsion</li>
-                    </ul>
-                </li>
-                <li>FLAT WORK
-                    <ul>
-                        <li>Wire Mesh</li>
-                        <li>Expansion Joint</li>
-                        <li>Metal Key Way</li>
-                        <li>Rigid Insulation</li>
-                        <li>Zip Strap</li>
-                        <li>Vapor Barrier</li>
-                        <li>Concrete Sealer</li>
-                    </ul>
-                </li>
-                <li>DRAINAGE
-                    <ul>
-                        <li>Drain Pipe</li>
-                        <li>PVC Fittings</li>
-                        <li>Sewer Pipe</li>
-                        <li>Donduit</li>
-                        <li>Waterline</li>
-                        <li>Channel Drain</li>
-                        <li>Yard Drains</li>
-                    </ul>
-                </li>
-                <li>FRAMING
-                    <ul>
-                        <li>Simpson Strong Tie</li>
-                        <li>Hand Drive Nails</li>
-                        <li>Pneumatic Nails & Staples</li>
-                        <li>Machine Bolts</li>
-                        <li>All Thread</li>
-                        <li>Screws</li>
-                        <li>Collated Screws</li>
-                        <li>Pipe Columns</li>
-                        <li>Poly Film</li>
-                        <li>Subfloor Glue</li>
-                        <li>Nervoustral/Sill Sealer</li>
-                        <li>Fabricated Hangers</li>
-                        <li>Pocket Door Frames</li>
-                    </ul>
-                </li>
-                <li>SIDING
-                    <ul>
-                        <li>House Wraps</li>
-                        <li>Window & Door Flashings</li>
-                        <li>Caulkings</li>
-                        <li>Wood Gable Vents</li>
-                        <li>Plastic, Metal, Gable Vents</li>
-                        <li>Rim Vents</li>
-                        <li>Soffit Screens</li>
-                        <li>Continous Soffit Screen</li>
-                    </ul>
-                </li>
-            </ul>
-        </div>
-        <div class="middle">
+    <section id="tools-list" class="container">
 
-        </div>
-        <div class="right">
+        <img class="wrenches" src="/images/wrenches.png" alt="">
 
+        <div class="location-group">
+            <h3 class="location-name">PACIFIC WAREHOUSE</h3>
+            <p>234 Stewart Rd. SE <br>
+                Pacific, WA 98047
+            </p>
+            <p class="number">(800) 922-2082</p>
+        </div>
+
+        <div class="location-group2">
+            <h3 class="location-name h3-2">MARYSVILLE WAREHOUSE</h3>
+            <p>4806 56th Pl. NE <br>
+            Marysville, WA 98270
+            </p>
+            <p class="number">(800) 559-8566</p>
+        </div>
+
+        <h2 class="heading-lines"><span>OUR</span> INVENTORY</h2>
+
+        <ul class="main-list">
+            <li class="list-header">EXCAVATION
+                <ul class="list-body">
+                    <li>Filter Fence</li>
+                    <li>Geo Textiles</li>
+                    <li>Culvert</li>
+                    <li>Flagging Tape</li>
+                    <li>Catch Basins</li>
+                    <li>Straw</li>
+                    <li>Filter Fabric</li>
+                </ul>
+            </li>
+            <li class="list-header">FOUNDATION
+                <ul class="list-body">
+                    <li>Rebar, Cut & Bent Rebar</li>
+                    <li>ICF Panels</li>
+                    <li>Custom/Anchor Bolts</li>
+                    <li>Lateral Restraint Straps</li>
+                    <li>Foundation Vents</li>
+                    <li>Sono Tube</li>
+                    <li>Pier Molds</li>
+                    <li>Access Wells</li>
+                </ul>
+            </li>
+            <li class="list-header">CONCRETE ACCESSORIES
+                <ul class="list-body">
+                    <li>Cleats/Snap Ties</li>
+                    <li>Tie Wire</li>
+                    <li>Duplex Nails</li>
+                    <li>Form Oil</li>
+                    <li>Wood & Metal Stakes</li>
+                    <li>Snaptie Shoes</li>
+                    <li>Footing Straps</li>
+                    <li>Asphault Emulsion</li>
+                </ul>
+            </li>
+            <li class="list-header">FLAT WORK
+                <ul class="list-body">
+                    <li>Wire Mesh</li>
+                    <li>Expansion Joint</li>
+                    <li>Metal Key Way</li>
+                    <li>Rigid Insulation</li>
+                    <li>Zip Strap</li>
+                    <li>Vapor Barrier</li>
+                    <li>Concrete Sealer</li>
+                </ul>
+            </li>
+            <li class="list-header drainage">DRAINAGE
+                <ul class="list-body">
+                    <li>Drain Pipe</li>
+                    <li>PVC Fittings</li>
+                    <li>Sewer Pipe</li>
+                    <li>Donduit</li>
+                    <li>Waterline</li>
+                    <li>Channel Drain</li>
+                    <li>Yard Drains</li>
+                    <img aria-hidden="true" class="screw" src="/images/screw.png" alt="">
+                </ul>
+            </li>
+            <li class="list-header">FRAMING
+                <ul class="list-body">
+                    <li>Simpson Strong Tie</li>
+                    <li>Hand Drive Nails</li>
+                    <li>Pneumatic Nails & Staples</li>
+                    <li>Machine Bolts</li>
+                    <li>All Thread</li>
+                    <li>Screws</li>
+                    <li>Collated Screws</li>
+                    <li>Pipe Columns</li>
+                    <li>Poly Film</li>
+                    <li>Subfloor Glue</li>
+                    <li>Nervoustral/Sill Sealer</li>
+                    <li>Fabricated Hangers</li>
+                    <li>Pocket Door Frames</li>
+                </ul>
+            </li>
+            <li class="list-header">SIDING
+                <ul class="list-body">
+                    <li>House Wraps</li>
+                    <li>Window & Door Flashings</li>
+                    <li>Caulkings</li>
+                    <li>Wood Gable Vents</li>
+                    <li>Plastic, Metal, Gable Vents</li>
+                    <li>Rim Vents</li>
+                    <li>Soffit Screens</li>
+                    <li>Continous Soffit Screen</li>
+                </ul>
+            </li>
+            <li class="list-header">VENTING
+                <ul class="list-body">
+                    <li>Dryer Vents</li>
+                    <li>Roof Vents</li>
+                    <li>Caulkings</li>
+                    <li>Ridge Vent</li>
+                    <li>Duct Tape</li>
+                    <li>Expanding Foam</li>
+                    <li>Strapping</li>
+                    <li>Valley Boot</li>
+                </ul>
+            </li>
+            <li class="list-header last">TOOLS
+                <ul class="list-body">
+                    <li>Shovels, Rakes, Picks</li>
+                    <li>Mauls, Hammers</li>
+                    <li>Ladders</li>
+                    <li>Wheelbarrows</li>
+                    <li>Plastic, Metal, Gable Vents</li>
+                    <li>Saw Blades</li>
+                    <li>Chapman Sprayers</li>
+                    <li>Continous Soffit Screen</li>
+                    <li>Hand Tools</li>
+                    <li>Pneuimatic Tools</li>
+                    <li>Compressors</li>
+                    <li>Cutter Bender</li>
+                    <li>Quik Stik</li>
+                    <li>Quik Drive Gun</li>
+                    <li>Pam Screw Gun</li>
+                    <li>Advantech Foam Applicator Gun</li>
+                </ul>
+            </li>
+        </ul>
+    </section>
+
+    <section id="partners" class="container">
+        <h2 class="heading-lines container"><span>OUR</span> PARTNERS</h2>
+        <div class="image-box"><div aria-hidden="true" class="yellow"></div><img src="/images/advantech.jpg" alt=""></div>
+        <div class="image-box"><div aria-hidden="true" class="yellow"></div><img src="/images/strong-tie.jpg" alt=""></div>
+        <div class="image-box"><div aria-hidden="true" class="yellow"></div><img src="/images/insulfoam.jpg" alt=""></div>
+        <div class="image-box"><div aria-hidden="true" class="yellow"></div><img src="/images/wey.png" alt=""></div>
+        <div class="image-box"><div aria-hidden="true" class="yellow"></div><img src="/images/activar.jpg" alt=""></div>
+        <div class="image-box"><div aria-hidden="true" class="yellow"></div><img src="/images/jl-industries.png" alt=""></div>
+        <div class="image-box"><div aria-hidden="true" class="yellow"></div><img src="/images/quick-flash.jpg" alt=""></div>
+        <div class="image-box"><div aria-hidden="true" class="yellow"></div><img src="/images/meadow-burke.png" alt=""></div>
+        <div class="image-box"><div aria-hidden="true" class="yellow"></div><img src="/images/joto-vent.png" alt=""></div>
+        <div class="image-box"><div aria-hidden="true" class="yellow"></div><img src="/images/super-anchor.png" alt=""></div>
+    </section>
+
+    <!-- ============================================ -->
+	<!--                    CONTACT                   -->
+    <!-- ============================================ -->
+
+    <section id="contact">
+        <div class="clippy-sales"></div>
+        <div class="contact-group container">
+            <h2>Questions? Get in touch today.</h2>
+            <button class="solid about-content-button contact-button"  type="button" onclick="location.href='contact.html'">
+                CONTACT VCS
+            </button>
         </div>
     </section>
 
