--- a/index.html
+++ b/index.html
@@ -506,7 +506,7 @@
     <!-- ============================================ -->
 
     <section id="gallery">
-        <div class="gallery-topper container">
+        <div class="gallery-topper">
             <h2 class="heading-lines"><span>PROJECT</span> GALLERY</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui nemo rerum eveniet
                 iure tempore odit voluptatum expedita officia quam corporis? Lorem ipsum dolor 
@@ -658,7 +658,7 @@
                     </div>
                     <div class="footer-location-info">
                         <p>234 Stewart Rd SE</p>
-                        <p>Pacidic, WA <br>98047</p>
+                        <p>Pacific, WA <br>98047</p>
                     </div>
                 </div>
 
