chnaged promotions on concrete and rebar pages, made kyle fixes, removed gallery from the website, fixed up the jobs page

--- a/html/about.html
+++ b/html/about.html
@@ -102,11 +102,7 @@
         <div id="bottom-nav-bar" class="side-nav" class="container">
             <ul id="main-navigation" class="side-nav">
                 <li><a href="/index.html">HOME</a></li>
-                <li class="about-li"><a class="a-link active-menu active-menu-main" href="about.html">ABOUT</a><i class="fas fa-chevron-down about-dropdown icon-drop active-menu"></i>
-                    <ul class="sub-nav sub1">
-                        <li><a class="about-drop-link" href="jobs.html">JOBS</a></li>
-                        <li><a class="about-drop-link" href="about.html">ABOUT VCS</a></li>
-                    </ul>
+                <li class="about-li"><a class="a-link active-menu active-menu-main" href="about.html">ABOUT</a>
                 </li>
                 <li class="services-li"></i><a class="s-link" href="services.html">SERVICES</a><i class="fas fa-chevron-down service-dropdown icon-drop"></i>
                     <ul class="sub-nav sub2">
@@ -117,9 +113,9 @@
                     </ul>
                 </li>
                 <li><a href="promotions.html">PROMOTIONS</a></li>
-                <li><a href="gallery.html">GALLERY</a></li>
                 <li class="contact-li"><a class="c-link" href="contact.html">CONTACT</a><i class="fas fa-chevron-down contact-dropdown icon-drop"></i>
                     <ul class="sub-nav sub3">
+                        <li><a class="about-drop-link" href="jobs.html">EMPLOYMENT OPPORTUNITIES</a></li>
                         <li><a id="contact-width-change" class="contact-drop-link"href="contact.html">CONTACT VCS</a></li>
                         <li><a id="contact-width-change" class="contact-drop-link" href="apply.html">APPLY FOR CREDIT</a></li>
                     </ul>
@@ -172,7 +168,7 @@
                 <p>Years<br> of Experience</p>
                 <h3>Valley's History</h3>
                 <p>In 1982 Cliff Beatty founded Valley Construction Supply with the sole purpose of providing the region’s contractors with a reliable source for building materials at competitive prices. Being built on the ideals of honesty, dedication and leadership, almost 40 years later Valley Construction Supply is still family owned and operated by Cliff’s son, Mark Beatty who continues with the same values. With a fleet of 25 trucks and two conveniently located warehouses, Pacific and Marysville, we are able to provide our customers with next day delivery. Our dedicated sales staff has an average of 25 years’ experience which gives them the ability to react to our customer’s needs. Valley Construction Supply is committed to putting customer service as a top priority in an ever changing building environment.</p>
-                <h3>Need Someone? We know someone</h3>
+                <h3>Need a contractor? We know contractors</h3>
                 <P>If your home builder  needs a quality foundation, excavator or a framing 
                    contractor we have those strong relationships to pass on, we do the same 
                    for our long time customers looking for new business and new relationships. 
@@ -215,8 +211,10 @@
                 <h2 class="heading-lines"><span>VCS</span><br> SALES TEAM</h2>
                 <p class="sales-description">Here at Valley Construction Supply we believe that the construction 
                     industry is a relationship business and that our customers deserve personalized, 
-                    hands-on customer service that serves them beyond their construction material needs! 
-                    Scroll, to learn more about our sales staff below!!!
+                    hands-on customer service that serves them beyond their construction material needs.
+                </p>
+                <p>If you are located north of the 520 bridge please call the NORTH store.  If you are located south of the 
+                    520 bridge, please call the SOUTH STORE.
                 </p>
             </div>
             <div class="sales-people south-store">
@@ -359,8 +357,7 @@
     <section id="job-opportunities">
         <div class="job-content container">
             <h2><span>Job</span> Opportunities</h2>
-            <h3>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Saepe accusantium reiciendis expedita 
-                inventore ex? Facilis doloremque minus mollitia aliquam quam.
+            <h3>Want to be part of a team where we value hard work and dedication and have a culture that rewards you with growth, development and internal promotions? 
             </h3>
 
             <button class="job-button" type="button" onclick="location.href='inside-sales.html'">
@@ -372,9 +369,9 @@
             <button class="job-button" type="button" onclick="location.href='warehouse-driver.html'">
                 Warehouse/Driver</button>
 
-            <p class="job-bottom-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cum ut ex dolor inventore dolorem? Repellendus 
-               ipsum vel commodi vero beatae corrupti numquam optio quaerat dignissimos, eaque excepturi quisquam soluta 
-               possimus.
+            <p class="job-bottom-text">We are looking for individuals to join our team who can work well 
+               with others, be able to keep up in a fast paced environment, posses orginizational skills, interpersonal skills,
+               is a self starter, and can communicate verbally and in writing.
             </p>
         </div>
         <button class="solid jobs-button"  type="button" onclick="location.href='jobs.html'">
