--- a/html/concrete.html
+++ b/html/concrete.html
@@ -112,10 +112,9 @@
                     </ul>
                 </li>
                 <li><a href="promotions.html">PROMOTIONS</a></li>
-                <li><a href="gallery.html">GALLERY</a></li>
                 <li class="contact-li"><a class="c-link" href="contact.html">CONTACT</a><i class="fas fa-chevron-down contact-dropdown icon-drop"></i>
                     <ul class="sub-nav sub3">
-                        <li><a class="about-drop-link" href="jobs.html">JOBS</a></li>
+                        <li><a class="about-drop-link" href="jobs.html">EMPLOYMENT OPPORTUNITIES</a></li>
                         <li><a id="contact-width-change" class="contact-drop-link" href="contact.html">CONTACT VCS</a></li>
                         <li><a id="contact-width-change" class="contact-drop-link" href="apply.html">APPLY FOR CREDIT</a></li>
                     </ul>
@@ -217,7 +216,10 @@
     <section id="promotions">
         <div class="container">
             <div class="card container">
-                <img src="/images/worker.jpg" alt="iron worker pulling something">
+                <div class="promotion-image">
+                    <p>ADDITIONAL</p>
+                    <p>15% OFF</p>
+                </div>
                 <div class="card-info">
                     <h3>Recieve a 15% disocunt!</h3>
                     <p>Open a new list account and recieve an additional 15% discount for the first 3 billing cycles.
