--- a/html/contact.html
+++ b/html/contact.html
@@ -112,10 +112,9 @@
                     </ul>
                 </li>
                 <li><a href="promotions.html">PROMOTIONS</a></li>
-                <li><a href="gallery.html">GALLERY</a></li>
                 <li class="contact-li"><a class="c-link active-menu" href="contact.html">CONTACT</a><i class="fas fa-chevron-down contact-dropdown icon-drop active-menu"></i>
                     <ul class="sub-nav sub3">
-                        <li><a class="about-drop-link" href="jobs.html">JOBS</a></li>
+                        <li><a class="about-drop-link" href="jobs.html">EMPLOYMENT OPPORTUNITIES</a></li>
                         <li><a id="contact-width-change" class="contact-drop-link active-menu"href="contact.html">CONTACT VCS</a></li>
                         <li><a id="contact-width-change" class="contact-drop-link" href="apply.html">APPLY FOR CREDIT</a></li>
                     </ul>
@@ -140,9 +139,7 @@
         <div class="container landing-group">
             <div class="landing-text container">
                 <h1>CONTACT VALLEY</h1>
-                <h2 class="container">Valley Construction Supply is the largest locally owned and operated
-                    supplier of wholesale concrete, framing, rebar, draining and venting 
-                    hardware for Seattle and the surrounding Puget Sound area.
+                <h2 class="container">Got questions?  Let us know!  Our staff are ready to take your call and help you with any supply need.
                 </h2>
             </div>
         </div>
@@ -168,11 +165,11 @@
                 <button name="submit" type="submit" id="contact-submit" class="primary" data-submit="...Sending">Submit</button>
             </p>
         </form>
-        <h4 class="form-h4">Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
-            Iure sunt ut repellat minus aliquam, magnam temporibus?
+        <h4 class="form-h4">If you are north of the 520 bridge, please call the NORTH STORE, 
+            and if you are south pf 520 you can call the SOUTH STORE.
         </h4>
-        <p class="form-p">Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
-           Inventore nam vitae voluptas labore repellat ullam.
+        <p class="form-p">Two locations to service the entire Northwest.  Wherever you are, Valley Construction Supply 
+            can be there with your order within one day of ordering.  
         </p>
     </section>
 
@@ -195,6 +192,7 @@
                     <p>4806 56th Pl NE <br>
                        Marysville, WA 98270
                     </p>
+                    <p>(800) 559-8566</p>
                 </div>
                 <div aria-hidden="true" class="clip-bottom"></div>
             </div>
@@ -222,6 +220,7 @@
                     <p>234 Stewart Rd SE <br>
                         Pacific, WA 98047
                     </p>
+                    <p>(800) 922-2082</p>
                 </div>
                 <div class="clip-bottom"></div>
             </div>
