--- a/html/jobs.html
+++ b/html/jobs.html
@@ -16,7 +16,7 @@
 
     <!-- Stylesheet -->
     <link rel="stylesheet" href="/css/root-styles.css">
-    <link rel="stylesheet" href="/css/apply.css">
+    <link rel="stylesheet" href="/css/jobs.css">
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css"/>
 
     <!-- Fonts -->
@@ -112,10 +112,9 @@
                     </ul>
                 </li>
                 <li><a href="promotions.html">PROMOTIONS</a></li>
-                <li><a href="gallery.html">GALLERY</a></li>
                 <li class="contact-li"><a class="c-link active-menu" href="contact.html">CONTACT</a><i class="fas fa-chevron-down contact-dropdown icon-drop active-menu"></i>
                     <ul class="sub-nav sub3">
-                        <li><a class="about-drop-link" href="jobs.html">JOBS</a></li>
+                        <li><a class="about-drop-link" href="jobs.html">EMPLOYMENT OPPORTUNITIES</a></li>
                         <li><a id="contact-width-change" class="contact-drop-link"href="contact.html">CONTACT VCS</a></li>
                         <li><a id="contact-width-change" class="contact-drop-link active-menu" href="apply.html">APPLY FOR CREDIT</a></li>
                     </ul>
@@ -140,7 +139,7 @@
         <div class="container landing-group">
             <div class="landing-text">
 
-                <h1>LIST Credit Application</h1>
+                <h1>Employment Opportunities</h1>
                 
             </div>
         </div>
@@ -173,6 +172,19 @@
             <p class="bottom-p">If you have any questions please call 253-447-2251.  Thank you for your inquiry and we look forward
                 to doing business with you.
             </p>
+
+            <h3 class="jobs-h3">Click on a job to see the requirements, benefits, and responsibilities for each job we are hiring for. </h3>
+
+            <div class="jobs">
+                <button class="job-button" type="button" onclick=" window.open('/html/inside-sales.html', '_blank'); return false;">
+                    Inside Sales</button>
+                <button class="job-button" type="button" onclick=" window.open('/html/outside-sales.html', '_blank'); return false;">
+                    Outside Sales</button>
+                <button class="job-button" type="button" onclick=" window.open('/html/warehouse.html', '_blank'); return false;">
+                    Warehouse</button>
+                <button class="job-button" type="button" onclick=" window.open('/html/warehouse-driver.html', '_blank'); return false;">
+                    Warehouse/Driver</button>
+            </div>
             <button class="solid app-button" type="submit" onclick="window.open('/images/JOB APPLICATION.pdf')">
                 CLICK TO DOWNLOAD
             </button>
