--- a/html/promotions.html
+++ b/html/promotions.html
@@ -112,10 +112,9 @@
                     </ul>
                 </li>
                 <li><a class="active-menu active-menu-main" href="promotions.html">PROMOTIONS</a></li>
-                <li><a href="gallery.html">GALLERY</a></li>
                 <li class="contact-li"><a class="c-link" href="contact.html">CONTACT</a><i class="fas fa-chevron-down contact-dropdown icon-drop"></i>
                     <ul class="sub-nav sub3">
-                        <li><a class="about-drop-link" href="jobs.html">JOBS</a></li>
+                        <li><a class="about-drop-link" href="jobs.html">EMPLOYMENT OPPORTUNITIES</a></li>
                         <li><a id="contact-width-change" class="contact-drop-link"href="contact.html">CONTACT VCS</a></li>
                         <li><a id="contact-width-change" class="contact-drop-link" href="apply.html">APPLY FOR CREDIT</a></li>
                     </ul>
