--- a/html/rebar-fabrication.html
+++ b/html/rebar-fabrication.html
@@ -103,7 +103,7 @@
             <ul id="main-navigation" class="side-nav">
                 <li><a href="/index.html">HOME</a></li>
                 <li class="about-li"><a class="a-link" href="about.html">ABOUT</a></li>
-                <li class="services-li"></i><a class="s-link" href="services.html">SERVICES</a><i class="fas fa-chevron-down service-dropdown icon-drop active-menu"></i>
+                <li class="services-li"></i><a class="s-link active-menu" href="services.html">SERVICES</a><i class="fas fa-chevron-down service-dropdown icon-drop active-menu"></i>
                     <ul class="sub-nav sub2">
                         <li><a id="contact-width-change" class="service-drop-link"href="services.html">OUR SERVICES</a></li>
                         <li><a id="contact-width-change" class="service-drop-link active-sub-menu" href="rebar-fabrication.html">REBAR FABRICATION</a></li>
@@ -112,10 +112,9 @@
                     </ul>
                 </li>
                 <li><a href="promotions.html">PROMOTIONS</a></li>
-                <li><a href="gallery.html">GALLERY</a></li>
                 <li class="contact-li"><a class="c-link" href="contact.html">CONTACT</a><i class="fas fa-chevron-down contact-dropdown icon-drop"></i>
                     <ul class="sub-nav sub3">
-                        <li><a class="about-drop-link" href="jobs.html">JOBS</a></li>
+                        <li><a class="about-drop-link" href="jobs.html">EMPLOYMENT OPPORTUNITIES</a></li>
                         <li><a id="contact-width-change" class="contact-drop-link"href="contact.html">CONTACT VCS</a></li>
                         <li><a id="contact-width-change" class="contact-drop-link" href="apply.html">APPLY FOR CREDIT</a></li>
                     </ul>
@@ -234,9 +233,12 @@
 
     <section id="promotions">
         <div class="container">
-            <div class="card container">
-                <img src="/images/worker.jpg" alt="iron worker pulling something">
-                <div class="card-info">
+            <div class="card">
+                <div class="promotion-image">
+                    <p>ADDITIONAL</p>
+                    <p>15% OFF</p>
+                </div>
+                <div class="card-info container">
                     <h3>Recieve a 15% disocunt!</h3>
                     <p>Open a new list account and recieve an additional 15% discount for the first 3 billing cycles.
                        Our normal terms on a new list account have a 10% disount when paid by the 10th of each month.
