--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
                 <h2 class="heading-lines"><span>ABOUT</span> VALLEY</h2>
                 <img src="../images/worker.jpg" alt="iron worker pulling something" width="300" height="300">
                 <div class="about-box">
-                    <h3><span>Committed to</span> superior quality and results.</h3>
+                    <h3><span>Committed to</span> the best customer service</h3>
                     <p>Valley Construction Supply is family owned and operated for 35+ years and we have been
                        working hard to ensure we provide every customer with remarkable service and up 
                        to date product knowledge.
@@ -313,8 +313,8 @@
                     <div class="numbers-item">
                         <svg aria-hidden="true" xmlns="http://www.w3.org/2000/svg" id="Layer_3" enable-background="new 0 0 64 64" height="512px" viewBox="0 0 64 64" width="512px" class=""><g><path d="m61 53v-33c0-2.757-2.243-5-5-5h-9.184c-.133-.374-.335-.711-.596-1 .48-.532.78-1.229.78-2 0-1.654-1.346-3-3-3h-5.719l.583-2.332c.09-.36.136-.733.136-1.106 0-2.516-2.046-4.562-4.562-4.562h-1.159l-1.854 5.563c-.183.55-.519 1.031-.972 1.394l-2.982 2.386c-.53.424-1.196.657-1.874.657h-.597v-2h-10v6h-7c-2.757 0-5 2.243-5 5v33h-2v5c0 2.757 2.243 5 5 5h52c2.757 0 5-2.243 5-5v-5zm-6-32v28h-46v-28h6v6h10v-2h.764l2.522 1.261c.967.484 2.049.739 3.131.739h10.583c1.654 0 3-1.346 3-3 0-.395-.081-.77-.22-1.116.95-.258 1.708-.965 2.036-1.884zm-29.403-8c1.131 0 2.24-.389 3.124-1.096l2.982-2.386c.754-.603 1.315-1.407 1.62-2.323l1.394-4.181c1.281.14 2.283 1.229 2.283 2.548 0 .209-.026.418-.077.621l-1.204 4.817h8.281c.551 0 1 .449 1 1s-.449 1-1 1h-5v2h5c.551 0 1 .449 1 1s-.449 1-1 1h-5v2h5c.551 0 1 .449 1 1s-.449 1-1 1h-2-3v2h3c.551 0 1 .449 1 1s-.449 1-1 1h-10.583c-.772 0-1.545-.183-2.236-.528l-2.945-1.472h-1.236v-10zm-8.597-2h6v14h-6zm-12 9c0-1.654 1.346-3 3-3h7v2h-6c-1.103 0-2 .897-2 2v28c0 1.103.897 2 2 2h46c1.103 0 2-.897 2-2v-28c0-1.103-.897-2-2-2h-8.184c-.133-.374-.335-.711-.596-1 .26-.289.463-.626.596-1h9.184c1.654 0 3 1.346 3 3v33h-54zm56 38c0 1.654-1.346 3-3 3h-52c-1.654 0-3-1.346-3-3v-3h58z" data-original="#000000" class="active-path" data-old_color="#000000" fill="#FDD00B"/><path d="m27 57h10v2h-10z" data-original="#000000" class="active-path" data-old_color="#000000" fill="#FDD00B"/><path d="m39 57h2v2h-2z" data-original="#000000" class="active-path" data-old_color="#000000" fill="#FDD00B"/><path d="m23 57h2v2h-2z" data-original="#000000" class="active-path" data-old_color="#000000" fill="#FDD00B"/><path d="m42.323 37h-4.631l4.788-3h-7.802l-2.678-6.692-2.677 6.692h-7.802l4.788 3h-4.631l-2.678-6.692-2.677 6.692h-6.119l4.87 3.995-2.445 7.646 6.371-4.703 6.371 4.703-2.416-7.554 4.938-3.094.151.094-2.416 7.554 6.372-4.703 6.371 4.703-2.416-7.554.151-.094 4.938 3.094-2.416 7.554 6.372-4.703 6.371 4.703-2.445-7.646 4.87-3.995h-6.119l-2.677-6.692zm-20.741 6.358-2.582-1.906-2.582 1.906.975-3.049-1.597-1.309h1.881l1.323-3.308 1.323 3.308h2.198l-1.943 1.217zm10.418-4.906-2.582 1.906 1.004-3.142-1.943-1.216h2.198l1.323-3.308 1.323 3.308h2.198l-1.943 1.217 1.004 3.142zm16.204.548-1.597 1.31.975 3.049-2.582-1.907-2.582 1.906 1.004-3.142-1.943-1.216h2.198l1.323-3.308 1.323 3.308z" data-original="#000000" class="active-path" data-old_color="#000000" fill="#FDD00B"/><path d="m51 31h2v-8h-4v2h2z" data-original="#000000" class="active-path" data-old_color="#000000" fill="#FDD00B"/><path d="m51 33h2v2h-2z" data-original="#000000" class="active-path" data-old_color="#000000" fill="#FDD00B"/></g> </svg>
                         <div>
-                            <span>9/10</span>
-                            <h4>Toll Brothers Rating</h4>
+                            <span>1st</span>
+                            <h4>In Customer Service</h4>
                         </div>
                     </div>
                     <div class="numbers-item last-item">
@@ -451,7 +451,7 @@
                    make a thorough list for drainage, foundation, framing 
                    and miscellaneous hardware.
                 </p>
-                <button type="button" onclick="location.href='html/services.html'">
+                <button type="button" onclick="location.href='html/contact.html'">
                    Read More<i class="fas fa-chevron-right"></i>
                 </button>
             </div>
@@ -474,11 +474,11 @@
                     material you need, we make sure to have them on stock and 
                     ready to order so you'll have what you need when you need it.
                 </p>
-                <button type="button" onclick="location.href='html/services.html'">
+                <button type="button" onclick="location.href='html/contact.html'">
                     Read More<i class="fas fa-chevron-right"></i>
                 </button>
             </div>
-            <div class="service-card">
+            <div class="service-card last-card">
                 <svg aria-hidden="true" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Capa_1" x="0px" y="0px" viewBox="0 0 512 512" style="enable-background:new 0 0 512 512;" xml:space="preserve" width="512px" height="512px" class=""><g><g>
                     <path style="fill:#FDD008" d="M68.267,384.002h-25.6c0,23.561,19.106,42.667,42.667,42.667S128,407.562,128,384.002H68.267z" data-original="#E69C5A" class="" data-old_color="#E69C5A"/>
                     <path style="fill:#FDD008" d="M204.8,384.002c0,23.561,19.106,42.667,42.667,42.667s42.667-19.106,42.667-42.667H204.8z" data-original="#E69C5A" class="" data-old_color="#E69C5A"/>
@@ -490,7 +490,7 @@
                     site by tomorrow.  We can get to any job site between Thurston
                     and Skagit County.
                 </p>
-                <button type="button" onclick="location.href='html/services.html'">
+                <button type="button" onclick="location.href='html/contact.html'">
                     Read More<i class="fas fa-chevron-right"></i>
                 </button>
             </div>
@@ -505,6 +505,7 @@
 	<!--                   GALLERY                    -->
     <!-- ============================================ -->
 
+<!--
     <section id="gallery">
         <div class="gallery-topper">
             <h2 class="heading-lines"><span>PROJECT</span> GALLERY</h2>
@@ -525,6 +526,7 @@
         </button>
         <div aria-hidden="true" class="clippy-gallery"></div>
     </section>
+-->
 
     <!-- ============================================ -->
 	<!--                   PARTNERS                   -->
