fixed contact page issues

--- a/index.html
+++ b/index.html
@@ -120,7 +120,6 @@
                         </ul>
                     </li>
                     <li><a href="html/promotions.html">PROMOTIONS</a></li>
-                    <li><a href="html/gallery.html">GALLERY</a></li>
                     <li class="contact-li"><a class="c-link" href="html/contact.html">CONTACT</a><i class="fas fa-chevron-down contact-dropdown icon-drop"></i>
                         <ul class="sub-nav sub3">
                             <li><a class="about-drop-link" href="html/jobs.html">JOBS</a></li>
@@ -337,10 +336,10 @@
     <section id="building-the-future">
         <div class="future-topper container">
             <h2 class="heading-lines"><span>BUILDING</span> THE FUTURE</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt ratione 
-               debitis voluptatum perspiciatis quis facere corrupti, odit enim, illo 
-               cupiditate laborum nemo officiis a earum nihil sint repudiandae veniam 
-               poris dolorum vel illum?
+            <p>It's very important at VCS to stay in the know on important changes to our ever changing industry, 
+               we take pride in being the information source for all of valued customers. We consider ourselves at 
+               VCS to not only offer top notch service, and fair pricing we want to offer added value by staying on 
+               top of the Green Building changes.
             </p>
             <div class="future-icons">
                 <div class="icon-group">
@@ -366,9 +365,7 @@
                 <img src="../images/seismic.jpg" alt="interior of a commercial building">
                 <div class="future-card-content container">
                     <h3>Siesmic Upgrade</h3>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
-                    Quasi asperiores explicabo eius deleniti, earum sed labore 
-                    unde! Debitis, explicabo officiis!
+                    <p>This would be for older buildings that need to have upgrades done to their structure to bring them up to code for Seattle's earthquake safety guidelines.
                     </p>
                     <button type="button" onclick="location.href='html/services.html'">
                         Read More<i class="fas fa-chevron-right"></i>
@@ -426,10 +423,8 @@
                     </g><path d="M419.243,39.001h-76.379C331.823,28.48,316.898,22,300.479,22h-8.76C285.022,8.742,271.263,0,256,0s-29.021,8.742-35.719,22  H211.5c-16.419,0-31.343,6.48-42.384,17.001H92.759c-26.885,0-48.758,21.873-48.758,48.758v375.484  c0,26.885,21.873,48.758,48.758,48.758h326.483c26.885,0,48.758-21.873,48.758-48.758V87.759  C468.001,60.874,446.128,39.001,419.243,39.001z M211.501,42h15.586c4.498,0,8.442-3.003,9.639-7.338  C239.111,26.029,247.037,20,256.001,20s16.89,6.029,19.274,14.662c1.197,4.335,5.142,7.338,9.639,7.338h15.565  c21.705,0,39.571,16.75,41.354,38.001H170.147C171.93,58.75,189.797,42,211.501,42z M448.001,463.244  c0,15.857-12.901,28.758-28.758,28.758H92.759c-15.857,0-28.758-12.901-28.758-28.758V87.759c0-15.857,12.901-28.758,28.758-28.758  h62.347c-3.276,7.512-5.105,15.794-5.105,24.5v6.5c0,5.523,4.477,10,10,10H351.98c5.523,0,10-4.477,10-10v-6.5  c0-8.705-1.829-16.988-5.105-24.5h62.368c15.857,0,28.758,12.901,28.758,28.758V463.244z" data-original="#000000" class="active-path" style="fill:#000000"/><path d="M178.268,149.595l-42.762,42.763l-13.173-13.174c-3.905-3.904-10.237-3.904-14.143,0c-3.905,3.905-3.905,10.237,0,14.143  l20.245,20.245c1.953,1.953,4.512,2.929,7.071,2.929s5.119-0.976,7.071-2.929l49.833-49.833c3.905-3.905,3.905-10.237,0-14.143  C188.505,145.691,182.173,145.691,178.268,149.595z" data-original="#000000" class="active-path" style="fill:#000000"/><path d="M168.001,368h-48c-5.523,0-10,4.477-10,10v48c0,5.523,4.477,10,10,10h48c5.523,0,10-4.477,10-10v-48  C178.001,372.477,173.524,368,168.001,368z M158.001,416h-28v-28h28V416z" data-original="#000000" class="active-path" style="fill:#000000"/><path d="M168.001,260h-48c-5.523,0-10,4.477-10,10v48c0,5.523,4.477,10,10,10h48c5.523,0,10-4.477,10-10v-48  C178.001,264.477,173.524,260,168.001,260z M158.001,308h-28v-28h28V308z" data-original="#000000" class="active-path" style="fill:#000000"/></g> </svg>
                 <h3>Promotions And Specials</h3>
                 <p>
-                   Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                   Totam, nesciunt voluptatem? Minima deserunt alias unde? 
-                   Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
-                   Vero, porro.
+                   At any given time we will be offering promotions for services, products, and on time payments.  We 
+                   currently have three specials going on at the moment, check out the "Promotions" page for more info.
                 </p>
                 <button type="button" onclick="location.href='html/promotions.html'">
                    Read More<i class="fas fa-chevron-right"></i>
@@ -535,9 +530,7 @@
     <section id="partners">
         <div class="partners-topper container">
             <h2 class="heading-lines"><span>OUR</span> PARTNERS</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
-               Deserunt corporis harum laborum! Dolor officiis distinctio 
-               vitae totam, commodi.
+            <p>We work with everyone in construction around Seattle and the surrounding Puget Sound.  Here's just a few of our top partners. 
             </p>
         </div>
         <div class="partner-showcase container">
