compressed all images

--- a/index.html
+++ b/index.html
@@ -413,7 +413,7 @@
                    Supply, you have a partner that will make sure you have everything you need.  That is our promise and guarantee.  
                 </p>
             </div>
-            <img src="images/worker.jpg" alt="iron worker pulling something" width="200px" height="200px">
+            <img src="images/valley-exterior.jpg" alt="iron worker pulling something" width="200px" height="200px">
         </div>
         <div class="service-card-container">
             <div class="service-card">
