final tweaks, filled in lorem ipsum text

--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
                 <img src="../images/seismic.jpg" alt="interior of a commercial building">
                 <div class="future-card-content container">
                     <h3>Siesmic Upgrade</h3>
-                    <p>This would be for older buildings that need to have upgrades done to their structure to bring them up to code for Seattle's earthquake safety guidelines.
+                    <p>Valley Construction Supply has been involved in numerous SEISMIC upgrade projects tied to historical renovation and preservation projects.
                     </p>
                     <button type="button" onclick="location.href='html/services.html'">
                         Read More<i class="fas fa-chevron-right"></i>
