--- a/html/contact.html
+++ b/html/contact.html
@@ -138,7 +138,7 @@
         <div class="landing-dark"></div>
         <div class="container landing-group">
             <div class="landing-text container">
-                <h1>CONTACT VALLEY</h1>
+                <h1>Contact Valley</h1>
                 <h2 class="container">Got questions?  Let us know!  Our staff are ready to take your call and help you with any supply need.
                 </h2>
             </div>
@@ -165,8 +165,8 @@
                 <button name="submit" type="submit" id="contact-submit" class="primary" data-submit="...Sending">Submit</button>
             </p>
         </form>
-        <h4 class="form-h4">If you are north of the 520 bridge, please call the NORTH STORE, 
-            and if you are south pf 520 you can call the SOUTH STORE.
+        <h4 class="form-h4">If you are north of the 520 bridge, please call the MARYSVILLE store, 
+            and if you are south of 520 you can call the PACIFIC store.
         </h4>
         <p class="form-p">Two locations to service the entire Northwest.  Wherever you are, Valley Construction Supply 
             can be there with your order within one day of ordering.  
